--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea/modules.xml
+/.idea/commandlinetools/schemas/frameworkDescriptionVersion1.1.4.xsd
