--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/custom.css": "/css/custom.css",
+    "/css/reset.css": "/css/reset.css",
     "/css/app.css": "/css/app.css"
 }
