--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/main.js": "/js/main.js",
     "/css/custom.css": "/css/custom.css",
     "/css/reset.css": "/css/reset.css",
     "/css/app.css": "/css/app.css"
