--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "tailwindcss": "^2.1.1"
     },
     "dependencies": {
+        "alpinejs": "^2.8.2",
         "fontisto": "^3.0.4"
     }
 }
